@@ -8,7 +8,10 @@
 	* generic/tclFCmd.c:
 	* tests/fileSystem.test: fixed a 'knownBug' with 'file
 	attributes ""'
-
+	* tests/winFCmd.test: added 'pcOnly' constraint to some
+	tests to make for more useful 'tests skipped' log from 
+	running all tests.
+	
 2002-07-17  Miguel Sofer  <msofer@users.sourceforge.net>
 
 	* generic/tclBasic.c (CallCommandTraces): delete traces now
